@@ -739,8 +739,8 @@
         name = "Petr Sobotka (Pietro)"
     [/entry] 
     [entry]
-	name = "Prevost Thomas (zancdar)"
-	email = "thomas.prevost_AT_gmail.com"
+        name = "Pierre Bourdon (delroth)"
+        email = "root_AT_delroth.is-a-geek.org"
     [/entry]	
     [entry]
         name = "Priit Laes (plaes)"
@@ -759,6 +759,10 @@
     [/entry]
     [entry]
         name = "Thomas Baumhauer (Baufo)"
+    [/entry]
+    [entry]
+        name = "Thomas Prevost (zancdar)"
+        email = "thomas.prevost_AT_gmail.com"
     [/entry]
     [entry]
         name = "Tomasz Sikorski (Tomsik)"
