@@ -9,6 +9,9 @@ Version 1.5.0+svn:
  * miscellaneous and bug fixes:
    * Implemented the option to use the mouse selection clipboard in X11
      the new widget library also uses it.
+ * Python AI:
+   * Implemented a function which detects if a location is on the map border.
+   * Implemented a function which gives the game's gold parameters.
 
 Version 1.5.0:
  * campaigns:
